--- a/public_html/index.html
+++ b/public_html/index.html
@@ -221,7 +221,7 @@ and open the template in the editor.
 
             <!--------------------      EMBED VIDEO    ------------------------------->
 
-            <div >
+            <div style="border:5px solid red">
                 <div class="panel panel-default" id="thestudio">
                     <div class="panel-body">
                         <div class="FavVideo col-md-3"><h2  style="text-align:center"><span class="glyphicon glyphicon-facetime-video"></span>Favorite video</h2>
