--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
+
 <html>
     <head>
         <title>Magazine Blog</title>
@@ -58,28 +54,29 @@ and open the template in the editor.
 
             <!-- leftMenu-->
             <div class="leftMenuBoby col-md-3">
-                <div  class='leftMenu'>
+                <div >
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne"><h4><span class="leftMenuGliph glyphicon glyphicon-home"></span>HOME</h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-shopping-cart"></span>Store</h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-pencil"></span>Blog</h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-user"></span>Community<span class="badge">42</span></h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-star-empty"></span>Contests</h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-info-sign"></span>About</h4></a>
                 </div>
-                <div class='leftMenu'>
+                <div>
                     <a href="http://www.jquery2dotnet.com"><h4><span class="leftMenuGliph glyphicon glyphicon-envelope"></span>Contact</h4></a>
                 </div>
-                <div style="padding:15px;"class="leftMenuContact">
+                <div class="leftMenuContact">
+                    <div class="containerInner">
                     <div class="col-md-2  glyphicon glyphicon-earphone"></div>
                     <div class="col-md-10 ">
                         42543523523<br>
@@ -89,8 +86,8 @@ and open the template in the editor.
                         office@website.com<br>
                         office@website.com<br>
                     </div>
-
                 </div>
+            </div>
             </div>
             <div class="BlogType col-md-3">
                 <div><h3>Tech<span class="arrow glyphicon glyphicon-chevron-right"></span></h3></div>
@@ -114,7 +111,7 @@ and open the template in the editor.
                 <div><p>Health</p></div>
                 <div><p>Travel</p></div>
             </div>
-            <div style="background-color:#4D6BAB; height:245px;"class="SocCircle col-md-3">
+            <div class="col-md-3 SocCircle">
                 <div>
                     <a href="#"><div class="soc"><span><img class="socIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-31-facebook.png" alt="Smiley face" height="27" width="27"></span>Facebook</div></a>
                     <a href="#"><div class="soc"><span><img class="socIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-32-twitter.png" alt="Smiley face" height="27" width="27"></span>Twitter</div></a>
@@ -125,10 +122,10 @@ and open the template in the editor.
             </div>
 
             <div class="col-md-3">
-                <div style="color:white;margin-top:10px;background-color:#4EC6F8;"><span><img class="socBigIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-31-facebook.png" alt="Smiley face" height="46" width="46"></span>
+                <div><span><img class="socBigIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-31-facebook.png" alt="Smiley face"></span>
                     <p class="socBigIconN">127K &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Follow <button class="myClass"><img src="bootstrap-3.3.7-dist/fonts/png/glyphicons-191-plus-sign.png" alt="" onclick="change(this)" height="17" width="17"></button></p>
                 </div>
-                <div style="color:white;background-color:#4EC6F8;"><span><img class="socBigIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-32-twitter.png" alt="Smiley face" height="46" width="46"></span>
+                <div><span><img class="socBigIcon" src="bootstrap-3.3.7-dist/fonts/png/glyphicons-social-32-twitter.png" alt="Smiley face"></span>
                     <p class="socBigIconN">87K &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Follow <button class="myClass"><img src="bootstrap-3.3.7-dist/fonts/png/glyphicons-191-plus-sign.png" alt="" onclick="change(this)" height="17" width="17"></button></p>
                 </div>
             </div>
@@ -221,7 +218,7 @@ and open the template in the editor.
 
             <!--------------------      EMBED VIDEO    ------------------------------->
 
-            <div style="border:5px solid red">
+            <div>
                 <div class="panel panel-default" id="thestudio">
                     <div class="panel-body">
                         <div class="FavVideo col-md-3"><h2  style="text-align:center"><span class="glyphicon glyphicon-facetime-video"></span>Favorite video</h2>
