--- a/public_html/index.html
+++ b/public_html/index.html
@@ -130,7 +130,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div style="margin-top:20px; background-color:#EA6060;" class="signIn col-md-12">
+                <div class="signIn col-md-12">
                     <div class="text-center"><h1>SIGN IN</h1></div>
                     <div class="text-center"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div>
                     <div class="text-center">
@@ -139,9 +139,9 @@
                         <span><img src="bootstrap-3.3.7-dist/fonts/flat-social-media-icons/google-plus.png" height="37" width="37"></span>
                         <span><img src="bootstrap-3.3.7-dist/fonts/flat-social-media-icons/linkedin.png" height="37" width="37"></span>
                     </div>
-
                 </div>
-                <div style="margin-top:20px;background-color:#EA6060;" class="col-md-12">
+                <div class="col-md-12 signIn">
+                    <div>
                     <div class="text-center"><h1>Join the Newsletter</h1></div>
                     <div class="text-center"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></div>
                     <div class="signUp col-md-12">
@@ -153,7 +153,7 @@
                                 <input type="email" placeholder="e-mail" class="form-control" id="email">
                             </div>
                         </div>
-
+                    </div>
                     </div>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                             <div style="margin-top:65px;"><p>Our mission is to build a future in which people live in harmony with </p></div>
                         </div>
                         <div class="col-md-9 holder embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item frame" src="//www.youtube.com/embed/ZuZkhu0GEyA"></iframe>
+                             <iframe width="560" height="315" class="embed-responsive-item frame" src="https://www.youtube.com/embed/3fnPwj1AMpo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             <div class="bar">
                                 <div class="Gbar">
                                     <a href="#">
