terms and policy

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -534,8 +534,8 @@
         </div>
     </div>
     <footer>
-        <a href="JavaScript:newPopup('/templates/terms.html');">Terms</a>
-        <a href="JavaScript:newPopup('/templates/policy.html');">Policy</a>
+        <a href="JavaScript:newPopup('/baqlcaliev/BlogMagazine/blob/master/public_html/templates/terms.html');">Terms</a>
+        <a href="JavaScript:newPopup('/baqlcaliev/BlogMagazine/blob/master/public_html/templates/policy.html');">Policy</a>
     </footer>
 
     <script type="text/javascript">
